[package]
name = "dcim"
version = "2.2.7"
edition = "2021"
authors = ["43615"]
description = "dc improved - Expanded rewrite of a classic RPN calculator / esoteric programming language"
documentation = "https://github.com/43615/dcim/wiki"
repository = "https://github.com/43615/dcim"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.8.5"
rug = "=1.22.0"
read_input = "=0.8.6"
phf = { version = "=0.11.2", features = ["macros"] }
regex = "=1.9.5"